--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -1456,156 +1456,50 @@ font-size:16px;
 outline:none;
 }
 
-.signup-basic{
-width:80%;
-height:400px;
-display:block;
+.profileSignUpToLeft{
+width:90%;
+height:100%;
 margin:0px auto;
+border-bottom:1px solid #efefef;
 }
 
 .textboxStandardLeft{
-width:48%;
-margin-right:3%;
+width:100%;
 height:40px;
-margin-bottom:20px;
+margin-top:20px;
 border:1px solid #d5d5d5;
 color:grey;
 outline:none;
 font-family:helvetica world;
 font-size:16px;
 padding:15px;
+padding-left:20px;
 }
 
 .textboxStandardRight{
 width:48%;
 height:40px;
-margin-bottom:20px;
+margin-top:10px;
 border:1px solid #d5d5d5;
-color:grey;	
+color:grey;
 outline:none;
 font-family:helvetica world;
 font-size:16px;
 padding:15px;
-}
-
-.select-country{
-width:35%;
-height:40px;
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-border-radius:5px;
-border:1px solid #d5d5d5;
-color:grey;
-padding:0;
-margin-bottom:20px;
-}
-
-.select-city{
-width:31%;
-height:40px;
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-margin-left:1%;
-margin-right:1%;
-border-radius:5px;
-border:1px solid #d5d5d5;
-color:grey;
-margin-bottom:20px;
-}
-
-.select-district{
-width:30%;
-height:40px;
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-border-radius:5px;
-border:1px solid #d5d5d5;
-color:grey;
-margin-bottom:20px;
-}
-
-.leftSignUpMini{
-width:48%;
-height:auto;
-margin-right:4%;
 float:left;
 }
 
-.fbtextboxLeftSignUpMini{
-width:100%;
-height:40px;
-margin-bottom:20px;
-border:1px solid #d5d5d5;
-color:grey;	
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-padding:15px;
-padding-left:50px;
-background-image: url("../img/facebook.png");
-background-repeat:no-repeat;
-background-size:27px 27px;
-background-position: 10px 6px; 
-}
-
-.TtextboxLeftSignUpMini{
-width:100%;
-height:40px;
-margin-bottom:20px;
-border:1px solid #d5d5d5;
-color:grey;	
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-padding:15px;
-padding-left:50px;
-background-image: url("../img/twitterconnect.png");
-background-repeat:no-repeat;
-background-size:27px 27px;
-background-position: 10px 6px; 
-}
-
-.ItextboxLeftSignUpMini{
-width:100%;
-height:40px;
-margin-bottom:20px;
-border:1px solid #d5d5d5;
-color:grey;	
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-padding:15px;
-padding-left:50px;
-background-image: url("../img/instagram.png");
-background-repeat:no-repeat;
-background-size:27px 27px;
-background-position: 10px 6px; 
-}
-
-.LtextboxLeftSignUpMini{
-width:100%;
-height:40px;
-margin-bottom:20px;
-border:1px solid #d5d5d5;
-color:grey;	
-outline:none;
-font-family:helvetica world;
-font-size:16px;
-padding:15px;
-padding-left:50px;
-background-image: url("../img/linkedin.png");
-background-repeat:no-repeat;
-background-size:27px 27px;
-background-position: 10px 6px; 
-}
-
-.rightSignUpMini{
+.textboxStandardRight2{
 width:48%;
-height:auto;
-float:left;
+height:40px;
+margin-top:10px;
+border:1px solid #d5d5d5;
+color:grey;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+float:right;
 }
 
 .select-sport{
@@ -1617,12 +1511,15 @@ font-size:16px;
 border-radius:5px;
 border:1px solid #d5d5d5;
 color:grey;
+margin-top:20px;
 margin-bottom:20px;
 }
 
 
 .textareaSignUp{
-width:100%;
+width:90%;
+display:block;
+margin:20px auto;
 height:280px;
 border:1px solid #d5d5d5;
 color:grey;	
@@ -1632,105 +1529,190 @@ font-size:16px;
 padding:10px;
 }
 
-
-.signup-header-ai2{
-width:25%;
+.rightSignUpLargeNav{
+width:50%;
 height:100%;
 float:left;
-color:grey;
-background-size:37px 37px;
-background-image: url("../img/signup1G.png");
-background-repeat:no-repeat;
-background-position: 20px 12px; 
 text-align:center;
-line-height:60px;
+cursor:pointer;
+color:grey;
+padding-top:20px;
 font-size:17px;
 font-family:helvetica world;
-cursor:pointer;
-padding-left:50px;
-}	
-
-.signup-header-ai2:hover{
-background-image: url("../img/signup1O.png");
-border-bottom:3px solid #f25622;
-color:#f25622;
-transition: border 0.2s ease;
-cursor:pointer;
 }
-	
-.signup-header-bi2{
-width:25%;
-height:100%;
-float:left;
-color:grey;
-background-size:37px 37px;
-background-image: url("../img/signup2G.png");
-background-repeat:no-repeat;
-background-position: 20px 12px; 
-text-align:center;
-line-height:60px;
-font-size:17px;
+
+.rightSignUpLargeNav:hover{
+border-bottom:4px solid #f26522;
+}
+
+.SignUpAdditionalInfo{
+margin-top:20px;
+width:100%;
+height:700px;
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+}
+
+.fbtextboxLeftSignUpMini{
+width:90%;
+height:40px;
+margin:20px auto;
+display:block;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
 font-family:helvetica world;
-cursor:pointer;
+font-size:16px;
+padding:15px;
 padding-left:50px;
-}	
-
-.signup-header-bi2:hover{
-background-image: url("../img/signup2O.png");
-border-bottom:3px solid #f25622;
-color:#f25622;
-transition: border 0.2s ease;
-cursor:pointer;
-}
-	
-.signup-header-ph2{
-width:25%;
-height:100%;
-float:left;
-color:grey;
-background-size:37px 37px;
-background-image: url("../img/signup3G.png");
+background-image: url("facebook.png");
 background-repeat:no-repeat;
-background-position: 20px 12px;  
-text-align:center;
-line-height:60px;
-font-size:17px;
+background-size:27px 27px;
+background-position: 10px 6px; 
+}
+
+.TtextboxLeftSignUpMini{
+width:90%;
+height:40px;
+margin:20px auto;
+display:block;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
 font-family:helvetica world;
-cursor:pointer;
+font-size:16px;
+padding:15px;
 padding-left:50px;
-}
-
-.signup-header-ph2:hover{
-background-image: url("../img/signup3O.png");
-border-bottom:3px solid #f25622;
-color:#f25622;
-transition: border 0.2s ease;
-cursor:pointer;
-}
-
-.signup-header-ep2{
-width:25%;
-height:100%;
-float:left;
-color:grey;
-background-size:37px 37px;
-background-image: url("../img/signup4G.png");
+background-image: url("twitterconnect.png");
 background-repeat:no-repeat;
-background-position: 20px 12px;  
-text-align:center;
-line-height:60px;
-font-size:17px;
-font-family:helvetica world;
-cursor:pointer;
-padding-left:50px;
+background-size:27px 27px;
+background-position: 10px 6px; 
 }
 
-.signup-header-ep2:hover{
-background-image: url("../img/signup4O.png");
-border-bottom:3px solid #f25622;
-color:#f25622;
-transition: border 0.2s ease;
-cursor:pointer;
+.ItextboxLeftSignUpMini{
+width:90%;
+height:40px;
+margin:20px auto;
+display:block;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+padding-left:50px;
+background-image: url("instagram.png");
+background-repeat:no-repeat;
+background-size:27px 27px;
+background-position: 10px 6px; 
+}
+
+.LtextboxLeftSignUpMini{
+width:90%;
+height:40px;
+margin:20px auto;
+display:block;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+padding-left:50px;
+background-image: url("linkedin.png");
+background-repeat:no-repeat;
+background-size:27px 27px;
+background-position: 10px 6px; 
+padding-bottom:20px;
+}
+
+.select-country{
+width:90%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+padding:0;
+margin:20px auto;
+display:block;
+}
+
+.select-city{
+width:90%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+margin-left:1%;
+margin-right:1%;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+margin:20px auto;
+display:block;
+}
+
+.select-district{
+width:90%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+margin:20px auto;
+display:block;
+margin-bottom:20px;
+}
+
+.SignUpTitle{
+width:100%;
+height:50px;
+color:grey;
+padding-left:30px;
+font-family:helvetica world;
+font-size:16px;
+line-height:60px;
+}
+
+.textareaSignUp{
+width:90%;
+display:block;
+margin:10px auto;
+height:150px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:10px;
+}
+
+.personalInfo{
+width:90%;
+margin:0px auto;
+height:110px;
+}
+
+.saveBTN{
+width: 200px;
+height: 33px;
+float: right;
+text-align: center;
+border: 2px solid #f26522;
+border-radius: 5px;
+color: #f26522;
+font-family: helvetica world;
+font-size: 15px;
+cursor: pointer;
+background-color:white;
 }
 
 
