--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -2475,13 +2475,13 @@ margin-top:30px;
 
 .sportoya-stat-div{
 width:100%;
-margin-top:140px;
+margin-top:160px;
 }
 
 
 .UpcommingEvents-div-mini{
 width:100%;
-height:38px;
+height:32px;
 }
 
 .orange-index-count{
@@ -2489,10 +2489,10 @@ background-color:#f26522;
 color:white;
 font-family:helvetica world;
 font-size:16px;
-line-height:22px;
+line-height:20px;
 text-align:right;
 width:26%;
-height:30px;
+height:25px;
 padding:4px;
 float:right;
 border-radius:5px;
@@ -2502,14 +2502,14 @@ padding-right:10px;
 
 .yellow-index-count{
 font-size:16px;
-line-height:22px;
+line-height:20px;
 background-color:#f2992e;
 color:white;
 font-family:helvetica world;
 text-align:right;
-height:30px;
+height:25px;
 float:right;
-height:30px;
+height:25px;
 padding:4px;
 width:30%;
 border-radius:5px;
@@ -2519,14 +2519,14 @@ padding-right:10px;
 
 .green-index-count{
 font-size:16px;
-line-height:22px;
+line-height:20px;
 background-color:#56bc8a;
 color:white;
 font-family:helvetica world;
 text-align:right;
-height:30px;
+height:25px;
 float:right;
-height:30px;
+height:25px;
 padding:4px;
 width:35%;
 border-radius:5px;
@@ -2536,14 +2536,14 @@ padding-right:10px;
 
 .blue-index-count{
 font-size:16px;
-line-height:22px;
+line-height:20px;
 background-color:#529ecc;
 color:white;
 font-family:helvetica world;
 text-align:right;
 width:42%;
 float:right;
-height:30px;
+height:25px;
 padding:4px;
 border-radius:5px;
 white-space: nowrap;
@@ -2580,9 +2580,70 @@ margin-bottom:5px;
 
 
 
+.index-mini-box{
+width:100%;
+height:100px;
+}
 
+.index-mini-box-left{
+width:28%;
+height:100%;
+float:left;
+background-color:grey;
+border-bottom-left-radius:5px;
+border-top-left-radius:5px;
+}
 
+.index-mini-box-right{
+width:72%;
+height:100%;
+float:left;
 
+}
+
+.index-mini-box-img{
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:35px 35px;
+margin:0px auto;
+height:100px;
+width:100%;
+overflow:hidden;
+display:block;
+border-bottom-left-radius:5px;
+border-top-left-radius:5px;
+}
+
+.index-mini-box-name{
+height:30px;
+width:100%;
+padding-top:15px;
+padding-left:20px;
+font-family:helvetica world;
+font-size:17px;
+color:#f26522;
+text-decoration:none;
+}
+
+.index-mini-box-name:hover{
+text-decoration:underline;
+}
+
+.index-mini-box-profession{
+height:30px;
+width:100%;
+font-family:helvetica world;
+font-size:15px;
+color:grey;
+padding-top:8px;
+padding-left:20px;
+}
+
+.index-mini-box-info{
+width:100%;
+height:30px;
+padding-top:10px;
+padding-left:15px;
+}
 
 
 }
