--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -1458,6 +1458,69 @@ padding-top:10px;
 margin-bottom:5px;
 }
 
+.index-mini-box{
+width:100%;
+height:100px;
+}
+
+.index-mini-box-left{
+width:28%;
+height:100%;
+float:left;
+background-color:grey;
+border-bottom-left-radius:5px;
+border-top-left-radius:5px;
+}
+
+.index-mini-box-right{
+width:72%;
+height:100%;
+float:left;
+}
+
+.index-mini-box-img{
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:35px 35px;
+margin:0px auto;
+height:100px;
+width:100%;
+overflow:hidden;
+display:block;
+border-bottom-left-radius:5px;
+border-top-left-radius:5px;
+}
+
+.index-mini-box-name{
+height:30px;
+width:100%;
+padding-top:15px;
+padding-left:20px;
+font-family:helvetica world;
+font-size:17px;
+color:#f26522;
+text-decoration:none;
+}
+
+.index-mini-box-name:hover{
+text-decoration:underline;
+}
+
+.index-mini-box-profession{
+height:30px;
+width:100%;
+font-family:helvetica world;
+font-size:15px;
+color:grey;
+padding-top:8px;
+padding-left:20px;
+}
+
+.index-mini-box-info{
+width:100%;
+height:30px;
+padding-top:10px;
+padding-left:15px;
+}
 
 
 
