--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -669,7 +669,7 @@ box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 .mobile-menu{
 width:100%;
 height:200px;
-background-image: url("../img/gym.jpg");
+background-image: url("../img/cyclyingmob.png");
 vertical-align: middle;
 background-size: 100%;
 background-position: 50% 50%;
@@ -679,8 +679,8 @@ background-repeat: no-repeat;
 .search-list-head{
 width:100%;
 height:50px;
-background-color:#f8f8f8;
-opacity:0.98;
+background-color:white;
+opacity:0.92;
 position:fixed;
 }
 
@@ -718,7 +718,7 @@ width:100%;
 
 .dropMenu-list-head select{
 width:80%;
-height:40px;
+height:35px;
 display:block;
 margin:17px auto;
 background:none;
@@ -728,7 +728,13 @@ outline:none;
 cursor:pointer;
 font-family: helvetica world;
 font-size:18px;
+padding-left:10px;
 color:white;
+-webkit-appearance: none;
+-moz-appearance:none;
+-webkit-appearance:none;
+background: url("../img/new_arrow.png") no-repeat right;
+background-color:rgba(237, 233, 233, 0.5);
 }
 
 .dropMenu-list-head select option{
