--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -2714,7 +2714,17 @@ color:grey;
 padding:50px;
 }
 
-
+.sign-in{
+width:25%;
+height:auto;
+background-color:white;
+border-radius: 5px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+display:block;
+margin:200px auto;
+}
 
 
 
