--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -677,7 +677,7 @@ padding-top:1px;
 .userRatings{
 margin-top:25px;
 width:100%;
-min-height:250px;
+min-height:200px;
 height:auto;
 background-color:white;
 border-radius: 3px;
@@ -703,13 +703,6 @@ color:grey;
 font-family:helvetica world;
 font-size:17px;
 border-top:1px solid #e5e5e5;
-}
-
-.userRatingsBody{
-width:95%;
-margin-top:15px;
-height:150px;
-margin:20px auto;
 }
 
 .rateN{
@@ -2740,12 +2733,148 @@ display:block;
 margin:200px auto;
 }
 
+.userArticlesBody{
+width:100%;
+margin-top:15px;
+height:auto;
+}
+
+.userArticlesBody ul {
+border-top:1px solid #efefef;
+}
+
+.userArticlesBody ul li{
+border-bottom:1px solid #efefef;
+}
 
 
+.userArticlesBody-mini-box{
+width:100%;
+height:100px;
+}
 
+.userArticlesBody-mini-box-left{
+width:28%;
+height:100%;
+float:left;
+background-color:grey;
+}
 
+.userArticlesBody-mini-box-right{
+width:72%;
+height:100%;
+float:left;
 
+}
 
+.userArticlesBody-mini-box-img{
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:35px 35px;
+margin:0px auto;
+height:100px;
+width:100%;
+overflow:hidden;
+display:block;
+border-bottom-left-radius:5px;
+border-top-left-radius:5px;
+}
+
+.userArticlesBody-mini-box-name{
+height:auto;
+width:100%;
+padding-top:15px;
+padding-left:20px;
+font-family:helvetica world;
+font-size:17px;
+color:#f26522;
+text-decoration:none;
+}
+
+.userArticlesBody-mini-box-name:hover{
+text-decoration:underline;
+}
+
+.userArticlesBody-mini-box-profession{
+height:30px;
+width:100%;
+font-family:helvetica world;
+font-size:15px;
+color:grey;
+padding-top:8px;
+padding-left:20px;
+}
+
+.userArticlesBody-mini-box-info{
+width:100%;
+height:30px;
+padding-top:10px;
+padding-left:15px;
+}
+
+.userArticlesBody-index-Views{
+width:20%;
+height:20px;
+float:left;
+text-align:left;
+color:grey;
+font-size:16px;
+font-family:helvetica world;
+
+}
+
+.userArticlesBody-index-reviews{
+width:20%;
+height:20px;
+float:left;
+text-align:left;
+color:grey;
+font-size:16px;
+font-family:helvetica world;
+}
+
+.userLocationBody{
+width:100%;
+margin-top:15px;
+height:200px;
+}
+
+.userOtherLocationsBody{
+width:100%;
+margin-top:15px;
+height:auto;
+}
+
+.userOtherLocationsBody ul{
+border-top:1px solid #efefef;
+width:100%; 
+height:auto; 
+}
+
+.userOtherLocationsBody ul a li{
+margin-left:10px;
+height:auto;
+width:100%;
+}
+
+.userOtherLocationsBody ul a li:hover{
+background-color:#efefef;
+}
+
+.userOtherLocationsBody-name{
+width:50%;
+height:auto;
+color:#f26522;
+padding:10px;
+float:left;
+}
+
+.userOtherLocationsBody-address{
+width:50%;
+height:auto;
+color:grey;
+padding:10px;
+float:left;
+}
 
 
 
